k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: microservice-k8s
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
